--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ data/Earlham/picrust/intermediate
 # don't track the (really big) contributional format picrust files
 data/Earlham/picrust/EC_metagenome_out/pred_metagenome_contrib.tsv.gz
 data/Earlham/picrust/pathways_out/path_abun_contrib.tsv.gz
+
+# don't track manuscript files
+manuscript/
